--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "bluebird": "^3.5.0",
     "cheerio": "^1.0.0-rc.2",
     "request": "^2.81.0",
-    "request-promise": "^4.2.1"
+    "request-promise": "^4.2.1",
+    "terminal-table": "^0.0.12"
   },
   "scripts": {
     "start": "node index.js"
