--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "bluebird": "^3.5.0",
     "cheerio": "^1.0.0-rc.2",
+    "mailgun-js": "^0.13.1",
     "request": "^2.81.0",
     "request-promise": "^4.2.1",
     "terminal-table": "^0.0.12"
